--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   </head>
   <body>
     <div id="container">
+      <h1 id="main-heading">What is your social personality? Answer the questions below to find out more</h1>
       <div id="wrapper">
         <h1 id="question"></h1>
         <div>
